--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: QA Blog
+subtitle: This is where I typically store anything useful for a QA engineer to know
 use-site-title: true
 ---
 
