--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: QA Blog
+title: QA Blog by Simon Kerr
 subtitle: This is where I typically store anything useful for a QA engineer to know
 use-site-title: true
 ---
