--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: QA Blog by Simon Kerr
-subtitle: This is where I typically store anything useful for a QA engineer to know
+title: Quality Assurance
+subtitle: Informative Quality Assurance related posts by Simon Kerr
 use-site-title: true
 ---
 
