--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Quality Assurance
+title: QA Blog
 subtitle: Informative Quality Assurance related posts by Simon Kerr
 use-site-title: true
 ---
